--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 "pdfminer.six" = "*"
 coverage = "*"
+django = "*"
+python-magic = "*"
 
 [requires]
 python_version = "3.8"
