--- a/data_vis/package.json
+++ b/data_vis/package.json
@@ -8,8 +8,10 @@
     "dependencies": {
         "@nivo/api": "^0.62.0",
         "core-js": "3",
+        "rc-slider": "^9.5.1",
         "react": "^16.13.1",
-        "react-dom": "^16.13.1"
+        "react-dom": "^16.13.1",
+        "styled-components": "^5.2.0"
     },
     "devDependencies": {
         "@babel/core": "^7.11.6",
@@ -18,7 +20,11 @@
         "@babel/preset-env": "^7.11.5",
         "@babel/preset-react": "^7.10.4",
         "babel-loader": "^8.1.0",
+        "babel-plugin-styled-components": "^1.11.1",
         "webpack": "^4.44.2",
         "webpack-cli": "^3.3.12"
+    },
+    "resolutions": {
+        "styled-components": "^5"
     }
 }
