--- a/data_vis/package.json
+++ b/data_vis/package.json
@@ -21,6 +21,8 @@
         "@babel/preset-react": "^7.10.4",
         "babel-loader": "^8.1.0",
         "babel-plugin-styled-components": "^1.11.1",
+        "eslint": "^7.10.0",
+        "eslint-plugin-react": "^7.21.3",
         "webpack": "^4.44.2",
         "webpack-cli": "^3.3.12"
     },
