--- a/data_vis/.eslintrc.json
+++ b/data_vis/.eslintrc.json
@@ -1,7 +1,9 @@
 {
     "env": {
-        "es6": true
+        "es6": true,
+        "node": true
     },
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 8,
         "sourceType": "module",
@@ -23,7 +25,8 @@
                 "args": "none",
                 "ignoreRestSiblings": true
             }
-        ]
+        ],
+        "react/prop-types": "off"
     },
     "settings": {
         "react": {
