--- a/data_vis/package.json
+++ b/data_vis/package.json
@@ -19,6 +19,7 @@
         "@babel/plugin-transform-runtime": "^7.11.5",
         "@babel/preset-env": "^7.11.5",
         "@babel/preset-react": "^7.10.4",
+        "babel-eslint": "^10.1.0",
         "babel-loader": "^8.1.0",
         "babel-plugin-styled-components": "^1.11.1",
         "eslint": "^7.10.0",
