--- a/data_vis/package.json
+++ b/data_vis/package.json
@@ -9,6 +9,7 @@
         "@nivo/api": "^0.62.0",
         "core-js": "3",
         "rc-slider": "^9.5.1",
+        "rc-switch": "^3.2.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "styled-components": "^5.2.0"
