--- a/data_vis/babel.config.json
+++ b/data_vis/babel.config.json
@@ -6,6 +6,7 @@
     "plugins": [
         "@babel/plugin-transform-runtime",
         "@babel/plugin-proposal-class-properties",
-        "babel-plugin-styled-components"
+        "babel-plugin-styled-components",
+        ["babel-plugin-import", {"libraryName": "antd"}]
     ]
 }
